# MappingYourTransit-hosted

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/outputs/posters/user_uploaded/: .gitignore
data/samples/databases/: GTFS_WATA.db  gtfs_slo.db
data/samples/gtfs_files/gtfs_charlottesville/: agency.txt  calendar.txt  fare_attributes.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
data/samples/gtfs_files/gtfs_error/: routes.txt  stop_times.txt  transfers.txt
data/samples/gtfs_files/gtfs_sd/: calendar.txt  calendar_dates.txt  fare_attributes.txt  fare_capping.txt  fare_containers.txt  fare_leg_rules.txt  fare_products.txt  fare_rules.txt  fare_transfer_rules.txt  feed_info.txt  rider_categories.txt  routes.txt  stops.txt  trips.txt
data/samples/gtfs_files/gtfs_slo/: agency.txt  areas.txt  calendar.txt  calendar_dates.txt  fare_attributes.txt  fare_leg_rules.txt  fare_media.txt  fare_products.txt  fare_rules.txt  fare_transfer_rules.txt  feed_info.txt  networks.txt  route_networks.txt  routes.txt  shapes.txt  stop_areas.txt  stop_times.txt  stops.txt  trips.txt
data/samples/gtfs_files/gtfs_wata/: agency.txt  calendar_dates.txt  shapes.txt  stops.txt  trips.txt
data/user_data/databases/: .gitignore
data/user_data/gtfs_files/zipped_files/: .gitignore
src/: feed.py  gui.py  heatmap.py  interactive_maps.py  my_sql.py  posters.py
