[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.2",
    "folium>=0.19.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "shapely>=2.1.0",
    "typing>=3.10.0.0",
]
